opam-version: "2.0"
maintainer: "Robur <team@robur.coop>"
authors: ["Robur <team@robur.coop>"]
homepage: "https://git.robur.io/robur/opam-graph"
dev-repo: "git+https://git.robur.io/robur/opam-graph.git"
bug-reports: "https://github.com/roburio/opam-graph/issues"
license: "ISC"

depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.0.0"}
  "cmdliner" {>= "1.1.0"}
  "fmt" {>= "0.8.7"}
  "logs"
  "opam-core"
  "opam-format"
  "ocamldot"
  "tyxml"
  "gg"
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["sh" "-ex" "packaging/FreeBSD/create_package.sh"] {os = "freebsd"}
  ["sh" "-ex" "packaging/debian/create_package.sh"] {os-family = "debian"}
]

synopsis: "Graphing dependencies of opam packages"
description: """
This package outputs dependency graphs (in svg and dot) of opam package
universes (opam switch export).
"""
